--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
     "@demox-labs/aleo-wallet-adapter-leo": "^0.0.19",
     "@demox-labs/aleo-wallet-adapter-react": "^0.0.19",
     "@demox-labs/aleo-wallet-adapter-reactui": "^0.0.31",
+    "@puzzlehq/sdk": "^0.1.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
