--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,8 +15,11 @@
     "@demox-labs/aleo-wallet-adapter-react": "^0.0.19",
     "@demox-labs/aleo-wallet-adapter-reactui": "^0.0.31",
     "@puzzlehq/sdk": "^0.1.35",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.5",
     "vite-tsconfig-paths": "^4.2.1"
   },
   "devDependencies": {
