--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
     "@demox-labs/aleo-wallet-adapter-react": "^0.0.19",
     "@demox-labs/aleo-wallet-adapter-reactui": "^0.0.31",
     "@puzzlehq/sdk": "^0.1.35",
+    "@tanstack/react-query": "^5.12.2",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
