--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,10 @@ jobs:
         uses: ./.github/actions/install-dependencies
 
   deploy:
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
     needs:
       - build
     if: github.ref == 'refs/heads/main'
